// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle disabled = matches snapshot 1`] = `
<div
  className={null}
>
  <input
    checked={null}
    className="bRjZJc"
    disabled={true}
    id="toggle1"
    name="toggle1"
    size={null}
    type="checkbox"
    value={null}
  />
  <label
    className="huSBbd"
    disabled={true}
    for="toggle1"
    onClick={null}
    size={null}
  />
</div>
`;

exports[`Toggle matches snapshot 1`] = `
<div
  className={null}
>
  <input
    checked={null}
    className="bRjZJc"
    disabled={null}
    id="toggle1"
    name="toggle1"
    size={null}
    type="checkbox"
    value={null}
  />
  <label
    className="eEbPvk"
    disabled={null}
    for="toggle1"
    onClick={null}
    size={null}
  />
</div>
`;
